<resources>
    <string name="app_name">Riverwatch</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="description_labeltitle"> Enter Image Description </string>
    <string name="preview_title">Preview Incident</string>
    <string name="preview_image">Image</string>
    <string name="preview_location">Location</string>
    <string name="preview_descriptiontitle"> Description</string>
    <string name="preview_description"> Description</string>
    <string name="preview_imagetag"> Image Tag </string>
    <string name="preview_imagetagtitle"> Tag </string>
    <string name="preview_nitratetitle">Nitrate</string>
    <string name="preview_nitritetitle">Nitrite</string>
    <string name="submit">Submit Incident</string>

</resources>
